Import of MSERGEANT/Text-WikiFormat-SAX-0.03 from CPAN.
gitpan-cpan-distribution: Text-WikiFormat-SAX
gitpan-cpan-version:      0.03
gitpan-cpan-path:         MSERGEANT/Text-WikiFormat-SAX-0.03.tar.gz
gitpan-cpan-author:       MSERGEANT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Text::WikiFormat::SAX Changes
 =============================
 
+0.03
+    - Fixed loop causing 100% cpu usage and crash
+
 0.02
     - Fixed line parsing
     
